@@ -1,3 +1,9 @@
+1999-11-20  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-changeset.c (gconf_create_reverse_change_set): New
+	function creates a change set which will revert another change set
+	on commit.
+
 1999-11-19  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf.c (gconf_server_broken): don't need to set the
